Ready to clasify!! :)

--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -108,20 +108,7 @@
    "execution_count": 7,
    "id": "e299321c-9442-43b5-995e-da869b816072",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jorge/Proyectos/medusapy/venv/lib64/python3.9/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.0.2 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "/home/jorge/Proyectos/medusapy/venv/lib64/python3.9/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator RandomForestClassifier from version 1.0.2 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "models = medusa.load(path_to_model_1, path_to_model_n)"
    ]
@@ -138,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e933af29-2cf7-4036-91fa-527ad8a97d39",
    "metadata": {},
    "outputs": [
@@ -146,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.54 s ± 52.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "869 ms ± 40.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -157,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8e4015b3-acaf-4171-bb8f-ab91c9a49d4a",
    "metadata": {},
    "outputs": [
@@ -212,7 +199,7 @@
        "  0.8426666666666667)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
